fixed image size issue causing distortion

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -130,29 +130,52 @@
         display: flex;
         flex-direction: column;
     }
+    .skills_tools div{
+        align-items: center;
+        justify-content: center;
+    }
+
+    .skills_tools div :nth-child(6){
+        width: auto;
+        height: 100px;
+    }
+    .skills_tools div :nth-child(9){
+        width: auto;
+        height: 110px;
+    }
     .experience{
         display: flex;
         flex-direction: column;
         width: 100%;
+        padding: 0px;
+        margin: 0px;
     }
     .experience h2{
         width: 100%;
     }
-    .experience div{
+
+    #logos{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 100%;
         margin: 0px;
         padding: 0px;
     }
-    #logos{
-        overflow: visible;
+    #caleb{
+        width: auto;
+        height: 50px;
     }
     .experience img{
         width: auto;
         height: 80px;
+    }
+    .experience figure{
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        align-items: center;
+        justify-content: center;
     }
     
 }
@@ -169,9 +192,6 @@
         width: auto;
         height: 150px;
     }
-    .aboutme p{
-
-    }
     .skills_tools{
         display: flex;
 
@@ -187,7 +207,6 @@
         width: 100%;
     }
     .experience div{
-        position: relative;
         display: flex;
     }
     #logos{
