--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -89,7 +89,7 @@ ul{
         align-items: flex-end;
         width: 500px;
         height: 300px;
-        padding: 20px 25px 0 0;
+        padding: 20px 25px 10px 0;
     }
     
      Link{
